<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sv"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:animateLayoutChanges="true">
<LinearLayout
    android:id="@+id/lpl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tud2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/view_border"
        android:gravity="center"
        android:text="@string/yesterday_s_usage_details"
        android:textColor="#1BD878"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/hml"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:background="#000000"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/ttu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="@drawable/view_border"
            android:gravity="center"
            android:text="@string/total_time"
            android:textColor="#FF0000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/filltty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="@drawable/view_border"
            android:gravity="center"
            android:hint="@string/_00"
            android:textColor="#FF9800"
            android:textColorHint="#65FF9800"
            android:textSize="14sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/awu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/view_border"
        android:gravity="center"
        android:text="@string/top_five_most_used_apps"
        android:textColor="#1BD878"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/hal1"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:background="#000000"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/an1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="@drawable/view_border"
            android:gravity="center"
            android:hint="@string/app_namee"
            android:textColor="#FF0000"
            android:textColorHint="#65FF9800"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/fillah1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="@drawable/view_border"
            android:gravity="center"
            android:hint="@string/_00"
            android:textColor="#FF9800"
            android:textColorHint="#65FF9800"
            android:textSize="14sp" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/hal2"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:background="#000000"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/an2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="@drawable/view_border"
            android:gravity="center"
            android:hint="@string/app_namee"
            android:textColor="#FF0000"
            android:textColorHint="#65FF9800"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/fillah2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="@drawable/view_border"
            android:gravity="center"
            android:hint="@string/_00"
            android:textColor="#FF9800"
            android:textColorHint="#65FF9800"
            android:textSize="14sp" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/hal3"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:background="#000000"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/an3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="@drawable/view_border"
            android:gravity="center"
            android:hint="@string/app_namee"
            android:textColor="#FF0000"
            android:textColorHint="#65FF9800"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/fillah3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="@drawable/view_border"
            android:gravity="center"
            android:hint="@string/_00"
            android:textColor="#FF9800"
            android:textColorHint="#65FF9800"
            android:textSize="14sp" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/hal4"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:background="#000000"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/an4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="@drawable/view_border"
            android:gravity="center"
            android:hint="@string/app_namee"
            android:textColor="#FF0000"
            android:textColorHint="#65FF9800"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/fillah4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="@drawable/view_border"
            android:gravity="center"
            android:hint="@string/_00"
            android:textColor="#FF9800"
            android:textColorHint="#65FF9800"
            android:textSize="14sp" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/hal5"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:background="#000000"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/an5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="@drawable/view_border"
            android:gravity="center"
            android:hint="@string/app_namee"
            android:textColor="#FF0000"
            android:textColorHint="#65FF9800"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/fillah5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="@drawable/view_border"
            android:gravity="center"
            android:hint="@string/_00"
            android:textColor="#FF9800"
            android:textColorHint="#65FF9800"
            android:textSize="14sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/weekdet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/view_border"
        android:gravity="center"
        android:text="@string/last_7_days_usage_details"
        android:textColor="#1BD878"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/hm7"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:background="#000000"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/ttu7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="@drawable/view_border"
            android:gravity="center"
            android:text="@string/total_time"
            android:textColor="#FF0000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/filltt7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="@drawable/view_border"
            android:gravity="center"
            android:hint="@string/_00"
            android:textColor="#FF9800"
            android:textColorHint="#65FF9800"
            android:textSize="14sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/wmu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/view_border"
        android:gravity="center"
        android:text="@string/top_five_most_used_apps"
        android:textColor="#1BD878"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/hal17"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:background="#000000"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/an17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="@drawable/view_border"
            android:gravity="center"
            android:hint="@string/app_namee"
            android:textColor="#FF0000"
            android:textColorHint="#65FF9800"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/fillah17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="@drawable/view_border"
            android:gravity="center"
            android:hint="@string/_00"
            android:textColor="#FF9800"
            android:textColorHint="#65FF9800"
            android:textSize="14sp" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/hal27"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:background="#000000"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/an27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="@drawable/view_border"
            android:gravity="center"
            android:hint="@string/app_namee"
            android:textColor="#FF0000"
            android:textColorHint="#65FF9800"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/fillah27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="@drawable/view_border"
            android:gravity="center"
            android:hint="@string/_00"
            android:textColor="#FF9800"
            android:textColorHint="#65FF9800"
            android:textSize="14sp" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/hal37"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:background="#000000"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/an37"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="@drawable/view_border"
            android:gravity="center"
            android:hint="@string/app_namee"
            android:textColor="#FF0000"
            android:textColorHint="#65FF9800"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/fillah37"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="@drawable/view_border"
            android:gravity="center"
            android:hint="@string/_00"
            android:textColor="#FF9800"
            android:textColorHint="#65FF9800"
            android:textSize="14sp" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/hal47"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:background="#000000"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/an47"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="@drawable/view_border"
            android:gravity="center"
            android:hint="@string/app_namee"
            android:textColor="#FF0000"
            android:textColorHint="#65FF9800"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/fillah47"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="@drawable/view_border"
            android:gravity="center"
            android:hint="@string/_00"
            android:textColor="#FF9800"
            android:textColorHint="#65FF9800"
            android:textSize="14sp" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/hal57"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:background="#000000"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/an57"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="@drawable/view_border"
            android:gravity="center"
            android:hint="@string/app_namee"
            android:textColor="#FF0000"
            android:textColorHint="#65FF9800"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/fillah57"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="@drawable/view_border"
            android:gravity="center"
            android:hint="@string/_00"
            android:textColor="#FF9800"
            android:textColorHint="#65FF9800"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>
</ScrollView>